--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <script type="text/babel">
         // --- 1. FIREBASE CONFIGURATION (REPLACE THIS WITH YOUR KEYS) ---
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY_HERE",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_ID",
-            appId: "YOUR_APP_ID"
-        };
-
+  apiKey: "AIzaSyAmCBzRXK5vUSQxVBdPhcAAGSPi0MuskDs",
+  authDomain: "irshad-system.firebaseapp.com",
+  projectId: "irshad-system",
+  storageBucket: "irshad-system.firebasestorage.app",
+  messagingSenderId: "240570536650",
+  appId: "1:240570536650:web:5e9275c93dd6847bc41a33",
+  measurementId: "G-G0X4HP3BFZ"
+};
         // Initialize Firebase
         if (!firebase.apps.length) {
             firebase.initializeApp(firebaseConfig);
@@ -767,3 +767,4 @@
     </script>
 </body>
 </html>
+
