--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
         // --- PASTE YOUR FIREBASE CONFIG HERE ---
         const firebaseConfig = {
-            // REPLACE THIS PART WITH YOUR COPIED CONFIG FROM FIREBASE CONSOLE
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+  apiKey: "AIzaSyDvc0RdxEGm4g3x6bXvRSP68N3M-GI6Svc",
+  authDomain: "irshad-system-72ec0.firebaseapp.com",
+  projectId: "irshad-system-72ec0",
+  storageBucket: "irshad-system-72ec0.firebasestorage.app",
+  messagingSenderId: "142530868697",
+  appId: "1:142530868697:web:d10a24325bddae878c55c8",
+  measurementId: "G-7M30123L3N"
+};
         // ----------------------------------------
 
         const app = initializeApp(firebaseConfig);
@@ -922,3 +922,4 @@
     </script>
 </body>
 </html>
+
