--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         // IMPORT AUTHENTICATION
         import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // --- PASTE YOUR FIREBASE CONFIG HERE ---
+        // --- NEW FIREBASE CONFIGURATION (IRSHAD SYSTEM 1234) ---
         const firebaseConfig = {
-            apiKey: "AIzaSyDvc0RdxEGm4g3x6bXvRSP68N3M-GI6Svc",
-            authDomain: "irshad-system-72ec0.firebaseapp.com",
-            projectId: "irshad-system-72ec0",
-            storageBucket: "irshad-system-72ec0.firebasestorage.app",
-            messagingSenderId: "142530868697",
-            appId: "1:142530868697:web:d10a24325bddae878c55c8",
-            measurementId: "G-7M30123L3N"
+            apiKey: "AIzaSyD0UOxJu-QY-9xwAzjs-ZcIb25TaH840Po",
+            authDomain: "irshad-system1234.firebaseapp.com",
+            projectId: "irshad-system1234",
+            storageBucket: "irshad-system1234.firebasestorage.app",
+            messagingSenderId: "113705140561",
+            appId: "1:113705140561:web:95146f5cac71d4ba6d9370",
+            measurementId: "G-V2F3BJ67PJ"
         };
         // ----------------------------------------
 
@@ -647,5 +647,3 @@
     </script>
 </body>
 </html>
-
-
